[package]
name = 'pallet-ibc'
version = "4.0.0-dev"
authors = ['Octopus Network <hi@oct.network>']
edition = '2021'
homepage = "https://oct.network"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/octopus-network/substrate-ibc/"
description = "An IBC implementation on Substrate."


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

log = { version = "0.4.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

# substate crates
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-tracing = { workspace = true }
pallet-timestamp = { workspace = true }

## for ibc protocl
pallet-ibc-utils = { version = "0.1.0", default-features = false, path = "../utils" }
ibc = { version = "0.28.0", default-features = false, features = [
    "parity-scale-codec",
    "mocks-no-std",
    "serde",
], git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.28.0-codec-borsh-serde" }
ibc-proto = { version = "0.25.0", default-features = false, features = [
    "parity-scale-codec",
], git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }

## optional
pallet-balances = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
chrono = "0.4.19"
hex = '0.4.0'
serde = { workspace = true, default-features = true }
sha2 = '0.10.2'

frame-support = { workspace = true, default-features = true}
pallet-assets = { workspace = true, default-features = true}
pallet-babe = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
sp-version = { workspace = true, default-features = true }

[features]
default = ['std']
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-ibc-utils/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-tracing/std",
    "ibc/std",
    "ibc-proto/std",
    "log/std",
    "serde/std",
    "serde_json/std",
    "pallet-timestamp/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
