[package]
name = "pallet-ibc-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { version = "0.28.0", default-features = false, features = [
    "parity-scale-codec",
], git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.28.0-codec-borsh-serde" }
ibc-proto = { version = "0.25.0", default-features = false, git = "https://github.com/octopus-network/ibc-proto-rs", branch = "ibc" }

# substrate crates
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
frame-support = { workspace = true }

[features]
default = ['std']
std = [
    "ibc/std",
    "ibc-proto/std",
    "codec/std",
    "scale-info/std",
    "sp-std/std",
    "frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
